maze.lessons.maze.island.IslandMaze.scala.error
Escaper:50: error: Unmatched closing brace '}' ignored here
}
^